@@ -3,6 +3,11 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/10/26
+	* Removed the config setting firewall_hits_on_undead setting, Firewall and
+	  kaensin now automatically calculate the number of hits they should do per
+	  iteration based on the skill trigger frequency (you may want to raise that
+	  delay of 1ms in the db, though). [Skotlex]
 2007/10/24
 	* Corrected a fex misshaps from r11571:
 	- disabling the memory manager
