@@ -3628,7 +3628,6 @@ static const struct _battle_data {
 	{ "mob_max_skilllvl",                   &battle_config.mob_max_skilllvl,                MAX_SKILL_LEVEL, 1, MAX_SKILL_LEVEL, },
 	{ "retaliate_to_master",                &battle_config.retaliate_to_master,             1,      0,      1,              },
 	{ "rare_drop_announce",                 &battle_config.rare_drop_announce,              0,      0,      10000,          },
-	{ "firewall_hits_on_undead",            &battle_config.firewall_hits_on_undead,         1,      1,      255,            },
 	{ "title_lvl1",                         &battle_config.title_lvl1,                      1,      0,      100,            },
 	{ "title_lvl2",                         &battle_config.title_lvl2,                      10,     0,      100,            },
 	{ "title_lvl3",                         &battle_config.title_lvl3,                      20,     0,      100,            },
