@@ -1,5 +1,8 @@
 Date	Added
 
+2007/10/26
+	* Removed the config setting firewall_hits_on_undead setting. The code
+	  handles this now using the delay defined in skill_unit_db. [Skotlex]
 2007/10/23
 	* Rev. 11559 Added Arunafeltz State WoE maps. [L0ne_W0lf]
 2007/10/22
